# r-engine

./: .gitignore  .gitmodules  CMakeLists.txt  emconfigure  opengl.code-workspace
bin-run/assets/shaders/: batch.fs  batch.vs  quad.fs  quad.vs  text.fs  text.vs
engine/: CMakeLists.txt
engine/include/: common.h
engine/include/app/: application.h  application_layer.h
engine/include/containers/: darray.h  llist.h
engine/include/core/: allocator.h  cstring.h  events.h  file_utils.h  log.h
engine/include/font/: font.h
engine/include/gl/: gl_buffer.h  gl_common.h  gl_framebuffer.h  gl_shader.h  gl_texture.h  gl_window.h
engine/include/renderer/: batch_renderer.h  quad_renderer.h  text_renderer.h
engine/src/app/: application.c  application_layer.c
engine/src/containers/: darray.c  llist.c
engine/src/core/: allocator.c  cstring.c  events.c  file_utils.c
engine/src/font/: font.c
engine/src/gl/: gl_buffer.c  gl_framebuffer.c  gl_shader.c  gl_texture.c  gl_window.c
engine/src/renderer/: batch_renderer.c  quad_renderer.c  text_renderer.c
engine/test/: llist.c
game/: CMakeLists.txt
game/src/: main.c
game/src/layers/: main_menu_layer.c  main_menu_layer.h  test_layer.c  test_layer.h
modules/glad/: CMakeLists.txt  cmake_install.cmake
modules/glad/include/glad/: gles2.h
modules/stbi/include/stbi/: stbi_image.h
sandbox/: CMakeLists.txt
sandbox/src/: main.c  test_lua.c
sandbox/src/cli/: cli.c  cli.h  text_input.c  text_input.h
sandbox/src/layers/: cli_layer.c  cli_layer.h  main_menu_layer.c  test_layer.c  test_layer.h
